--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -44,37 +44,45 @@
                                     <action selector="hideForm:" destination="L2G-jD-e0s" eventType="touchUpInside" id="uy0-w5-eMn"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Категория" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2yt-cd-ZlU">
-                                <rect key="frame" x="16" y="120" width="288" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" text="Текст вопроса" translatesAutoresizingMaskIntoConstraints="NO" id="QPr-7g-SDj">
-                                <rect key="frame" x="16" y="158" width="288" height="460"/>
+                                <rect key="frame" x="16" y="196" width="288" height="460"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Категория" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2yt-cd-ZlU">
+                                <rect key="frame" x="16" y="158" width="288" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Теги" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mWc-nm-VWS">
+                                <rect key="frame" x="16" y="120" width="288" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Cob-e8-sIx" firstAttribute="leading" secondItem="mXu-pO-DtV" secondAttribute="leadingMargin" constant="10" id="4wd-r2-HLr"/>
                             <constraint firstItem="QPr-7g-SDj" firstAttribute="leading" secondItem="mXu-pO-DtV" secondAttribute="leadingMargin" constant="10" id="8IP-00-cJc"/>
+                            <constraint firstItem="mWc-nm-VWS" firstAttribute="top" secondItem="Cob-e8-sIx" secondAttribute="bottom" constant="20" id="8N2-0e-aXU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2yt-cd-ZlU" secondAttribute="trailing" constant="10" id="AsL-h0-7MA"/>
-                            <constraint firstItem="2yt-cd-ZlU" firstAttribute="top" secondItem="Cob-e8-sIx" secondAttribute="bottom" constant="20" id="J3E-qe-T2X"/>
+                            <constraint firstItem="2yt-cd-ZlU" firstAttribute="top" secondItem="mWc-nm-VWS" secondAttribute="bottom" constant="20" id="Juh-bG-JQV"/>
                             <constraint firstItem="2yt-cd-ZlU" firstAttribute="leading" secondItem="mXu-pO-DtV" secondAttribute="leadingMargin" constant="10" id="MLn-Yg-US0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mWc-nm-VWS" secondAttribute="trailing" constant="10" id="NwH-eP-eE3"/>
                             <constraint firstItem="Y4w-Oq-nAs" firstAttribute="leading" secondItem="mXu-pO-DtV" secondAttribute="leadingMargin" id="P8d-hH-r96"/>
-                            <constraint firstItem="QPr-7g-SDj" firstAttribute="top" secondItem="2yt-cd-ZlU" secondAttribute="bottom" constant="20" id="SHv-wM-1MK"/>
                             <constraint firstItem="JPW-mY-QYy" firstAttribute="top" secondItem="R4S-3y-hTy" secondAttribute="bottom" id="bnk-qO-cJ4"/>
                             <constraint firstItem="Y4w-Oq-nAs" firstAttribute="top" secondItem="R4S-3y-hTy" secondAttribute="bottom" id="fDQ-hv-gRv"/>
                             <constraint firstItem="JPW-mY-QYy" firstAttribute="trailing" secondItem="mXu-pO-DtV" secondAttribute="trailingMargin" id="mcI-r4-C8d"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QPr-7g-SDj" secondAttribute="trailing" constant="10" id="mcx-Fp-NWr"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Cob-e8-sIx" secondAttribute="trailing" constant="10" id="ney-OF-Q1Y"/>
+                            <constraint firstItem="mWc-nm-VWS" firstAttribute="leading" secondItem="mXu-pO-DtV" secondAttribute="leadingMargin" constant="10" id="wyl-Wy-cUf"/>
                             <constraint firstItem="Cob-e8-sIx" firstAttribute="top" secondItem="N4u-K3-JU4" secondAttribute="bottom" constant="20" id="xVA-sp-TXl"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="questionCategory" destination="2yt-cd-ZlU" id="kAb-a2-l14"/>
+                        <outlet property="questionTags" destination="mWc-nm-VWS" id="iuN-SL-A8V"/>
                         <outlet property="questionText" destination="QPr-7g-SDj" id="hgT-TA-CmC"/>
                         <outlet property="questionTitle" destination="Cob-e8-sIx" id="4H9-Pt-T9H"/>
                     </connections>
