--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -89,7 +89,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vIy-iO-urh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1696" y="-338"/>
+            <point key="canvasLocation" x="1656" y="-170"/>
         </scene>
         <!--Questions View Controller-->
         <scene sceneID="jGh-gV-cCy">
@@ -201,7 +201,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUx-wJ-w8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="678" y="363"/>
+            <point key="canvasLocation" x="614" y="363"/>
         </scene>
         <!--Question Detail View Controller-->
         <scene sceneID="FDU-tN-BCv">
@@ -493,7 +493,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k8R-NH-903" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-198" y="-594"/>
+            <point key="canvasLocation" x="-376" y="-658"/>
         </scene>
         <!--Authorization View Controller-->
         <scene sceneID="ejL-tO-JwY">
@@ -655,7 +655,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hPY-0T-DcY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1325" y="-2052"/>
+            <point key="canvasLocation" x="1656" y="-2033"/>
+        </scene>
+        <!--Statistic View Controller-->
+        <scene sceneID="Jhe-JC-slB">
+            <objects>
+                <viewController id="HY1-5n-C4M" customClass="StatisticViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kj0-Dk-rfz"/>
+                        <viewControllerLayoutGuide type="bottom" id="yEF-nM-wss"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8qW-rE-qTk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zwn-Cs-s6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3552" y="-1109"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="jh1-Qg-Efd">
@@ -727,6 +745,9 @@
                                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="showUserStatistic:" destination="Xe2-Wi-8QZ" eventType="touchUpInside" id="V8D-cU-GiV"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zcI-oM-DeX">
                                                 <rect key="frame" x="150" y="488" width="300" height="35"/>
@@ -793,11 +814,12 @@
                         <outlet property="userParamsTable" destination="SYL-g4-0Qy" id="43H-8U-ved"/>
                         <outlet property="userRate" destination="yJv-QD-xde" id="EEs-aD-icN"/>
                         <segue destination="ch4-W7-k0g" kind="show" identifier="logOut" id="jdO-yh-WYz"/>
+                        <segue destination="HY1-5n-C4M" kind="show" identifier="user_statistic" id="9Jy-i1-Yu6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Eh-TM-mUL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2513" y="-1139"/>
+            <point key="canvasLocation" x="2509" y="-1187"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="F2t-O3-bA9">
@@ -860,7 +882,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RYB-Iz-YZH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-144" y="363.99999999999989"/>
+            <point key="canvasLocation" x="-376" y="363"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YOr-vA-cEy">
